--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,14 @@ body {
   font-family: Poppins, sans-serif;
   font-size: 1.2rem;
   color: white;
+  min-height: 100vh;
 }
+
+.full-height-grow {
+  display: flex;
+  flex-direction: column;
+}
+
 .brand-logo {
   display: flex;
   align-items: center;
@@ -52,4 +59,27 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 40px;
+  flex-grow: 1;
+}
+
+.title {
+  font-weight: 500;
+  font-size: 3em;
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+.subtitle {
+  font-weight: 500;
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.btn {
+  color: white;
+  background-color: #1762a7;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  font-size: 0.9rem;
 }
