--- a/styles.css
+++ b/styles.css
@@ -105,4 +105,15 @@ body {
   border-radius: 0.5rem;
   text-decoration: none;
   font-size: 0.9rem;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #2180d8;
+}
+
+.btn:focus {
+  background-color: #2796ff;
 }
